--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -2,7 +2,5 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Blog Ninja | <%=title%></title>
-  <style>
-    @import url("https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap");
-  </style>
+  <link rel="stylesheet" href="/styles.css">
 </head>
